--- a/client/Kelp/src/index.html
+++ b/client/Kelp/src/index.html
@@ -15,12 +15,13 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  </head>
+  <body class="mat-typography">
+    <app-root></app-root>
     <script
       src="https://kit.fontawesome.com/6f21796053.js"
       crossorigin="anonymous"
     ></script>
-  </head>
-  <body class="mat-typography">
-    <app-root></app-root>
   </body>
 </html>
