--- a/client/Kelp/src/index.html
+++ b/client/Kelp/src/index.html
@@ -19,8 +19,16 @@
       <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+  />
+  <link
+    href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
+    rel="stylesheet"
+  />
 </head>
-  <body class="mat-typography">
+  <body class="mat-typography" >
     <app-root></app-root>
     <script
       src="https://kit.fontawesome.com/6f21796053.js"
