--- a/client/Kelp/src/index.html
+++ b/client/Kelp/src/index.html
@@ -28,7 +28,7 @@
     rel="stylesheet"
   />
 </head>
-  <body class="mat-typography" >
+  <body class="mat-typography" style="height: 100%;" >
     <app-root></app-root>
     <script
       src="https://kit.fontawesome.com/6f21796053.js"
